Changelog
=========

1.1.0 (Unreleased)
------------------

* added a link to the view that migrate to blob from the control panel [keul]
* added a new ``Smart Link: access configuration`` permission for site configuration
  that "Site Administrator" role can handle [keul]
* added an utility to convert fake external link to became internal [keul]
* Aligned all ``Link.xml`` files to be Plone 4 compliant [keul]
* In Plone 4 the related items where duplicated (if used).
  No Plone 3.3 requires `collective.relateditems`__ [keul]
* Moved URL transformation features to an ``ILinkNormalizerUtility`` [keul]

__ http://plone.org/products/collective.relateditems

1.0.0 (2011-11-03)
------------------

* Plone 4.1 compatibility
* size of a smart link is the size of its image [keul]
* finally removed the fss.zcml. It's time to BLOB man! [keul]
* added the BLOB extension for image field [mircoangelini]
* added BLOB migration view: ``blob-smartlink-migration`` [mircoangelini]
* fixed icon handling, going back to the Plone 3 icons, disabling
  Sunburst CSS-sprite with a new ``smart_link.css`` resource [keul] 
* when linking an internal content, do not display a simple URL
  but a link using item's title [keul]

1.0.0rc2 (2010-11-06)
---------------------

* reStructured text fixes [keul]
* uninstall was not working under Plone 4.0 (this close `#5`__) [keul]
* URL utility description updated with latests features added in 1.0 version [keul]
* fixed duplicated icon when using (or not using anymore) this product on Plone 4 (close `#4`__).
  To make those additional icon disappear from Plone UI you may need a catalog update. [keul]
* configuration icon was not displayed properly on Plone 4 [keul]
* added the "*Front-end main URL*" feature (close `#3`__) [keul]

__ http://plone.org/products/smart-link/issues/5
__ http://plone.org/products/smart-link/issues/4
__ http://plone.org/products/smart-link/issues/3

1.0.0rc1 (2010-09-12)
---------------------

* Plone 4 compatibility [keul]